--- a/20230113.html
+++ b/20230113.html
@@ -160,7 +160,149 @@
     return ary
   }
 
-  for (var key in obj) {
+  function insertSort(ary) {
+    for (var i = 1; i < ary.length; i++) {
+      var value = ary[i]
+      for (var j = i - 1; j >= 0; j--) {
+        if (ary[j] > value) {
+          ary[j + 1] = ary[j]
+        } else {
+          break
+        }
+      }
+      ary[j + 1] = value
+    }
+    return ary
+  }
 
+  function mergeSort(ary) {
+    if (ary.length < 2) {
+      return ary
+    }
+
+    var mid = Math.floor(ary.length / 2)
+    var left = ary.slice(0, mid)
+    var right = ary.slice(mid)
+
+    mergeSort(left)
+    mergeSort(right)
+
+    var i = 0
+    var j = 0
+    var k = 0
+    while (i < left.length && j < right.length) {
+      if (left[i] < right[j]) {
+        ary[k] = left[i]
+        i++
+        k++
+      } else {
+        ary[k] = right[j]
+        j++
+        k++
+      }
+    }
+    while (i < left.length) {
+      ary[k] = left[i]
+      k++
+      i++
+    }
+    while (j < right.length) {
+      ary[k] = right[j]
+      k++
+      j++
+    }
+    return ary
+  }
+
+  function quickSort(ary) {
+    if (ary.length < 2) {
+      return ary.slice()
+    }
+    var num = ary[0]
+    var left = []
+    var middle = []
+    var right = []
+    for (let i = 0; i < ary.length; i++) {
+      if (ary[i] < num) {
+        left.push(ary[i])
+      } else if (ary[i] > num) {
+        right.push(ary[i])
+      } else if (ary[i] == num) {
+        middle.push(ary[i])
+      }
+    }
+
+    var sortedLeft = quickSort(left)
+    var sortedRight = quickSort(right)
+
+    return sortedLeft.concat(middle, sortedRight)
+  }
+  function quickSort2(ary) {
+    if (ary.length < 2) {
+      return ary
+    }
+    var num = ary[0]
+    var left = []
+    var right = []
+    var middle = []
+    for (let i = 0; i < ary.length; i++) {
+      if (ary[i] < num) {
+        left.push(ary[i])
+      } else if (ary[i] > num) {
+        right.push(ary[i])
+      } else if (ary[i] == num) {
+        middle.push(ary[i])
+      }
+    }
+    quickSort2(left)
+    quickSort2(right)
+
+    var i = 0
+    var k = 0
+    while (i < left.length) {
+      ary[k] = left[i]
+      k++
+      i++
+    }
+    i = 0
+    while (i < middle.length) {
+      ary[k] = middle[i]
+      k++
+      i++
+    }
+    i = 0
+    while (i < right.length) {
+      ary[k] = right[i]
+      k++
+      i++
+    }
+    return ary
+  }
+
+  function swap(ary, i, j) {
+    var t = ary[i]
+    ary[i] = ary[j]
+    ary[j] = t
+  }
+  function qSort(ary, start = 0, end = ary.length - 1) {
+    if (start >= end) {
+      return ary
+    }
+    var pivotIndex = Math.floor(Math.random() * (end - start + 1) + start)
+    var pivot = ary.at(pivotIndex)
+    swap(ary, pivotIndex, end)
+    //排序
+    var i = start, j = start
+    for (; j < end; j++) {
+      if (ary[j] < pivot) {
+        swap(ary, i, j)
+        i++
+      }
+    }
+    swap(ary, i, j)
+    qSort(ary, start, i - 1)
+    qSort(ary, i + 1, end)
+
+    return ary
   }
 </script>
